feat: avoid bufferedimage in memory where possible