@@ -1,6 +1,7 @@
 package de.itlobby.discoverj.services;
 
 import de.itlobby.discoverj.listeners.ActionParamListener;
+import de.itlobby.discoverj.models.ImageFile;
 import de.itlobby.discoverj.ui.core.ServiceLocator;
 import de.itlobby.discoverj.ui.core.ViewManager;
 import de.itlobby.discoverj.ui.core.Views;
@@ -12,21 +13,27 @@ import javafx.scene.Parent;
 import javafx.scene.input.MouseEvent;
 import javafx.scene.layout.VBox;
 import org.apache.commons.lang3.ObjectUtils;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
+import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
+import java.io.File;
+import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 public class ImageSelectionService implements Service {
+    private static final Logger log = LogManager.getLogger(ImageSelectionService.class);
     private LightBoxService lightBoxService;
-    private List<BufferedImage> images;
+    private List<ImageFile> imageFiles;
     private ImageSelectionViewController viewController;
-    private BufferedImage newCover = null;
+    private Optional<ImageFile> selectedCover = Optional.empty();
     private boolean selectionRunning;
 
-    public BufferedImage openImageSelection(List<BufferedImage> images, String title) {
-        this.images = images;
+    public Optional<ImageFile> openImageSelection(List<ImageFile> images, String title) {
+        this.imageFiles = images;
         selectionRunning = true;
 
         sortAndDistinctImages();
@@ -49,7 +56,7 @@ public class ImageSelectionService implements Service {
             SystemUtil.threadSleep(50);
         }
 
-        return newCover;
+        return selectedCover;
     }
 
     private void applyFilter() {
@@ -57,14 +64,14 @@ public class ImageSelectionService implements Service {
     }
 
     private void sortAndDistinctImages() {
-        this.images = images.stream().distinct().sorted(
+        this.imageFiles = imageFiles.stream().distinct().sorted(
                 (o1, o2) ->
                 {
-                    int m1 = o1.getHeight() * o1.getWidth();
-                    int m2 = o2.getHeight() * o2.getWidth();
+                    int m1 = o1.height() * o1.width();
+                    int m2 = o2.height() * o2.width();
                     return ObjectUtils.compare(m1, m2) * -1;
                 }
-        ).collect(Collectors.toList());
+        ).toList();
     }
 
     private void reloadImagesToView() {
@@ -82,29 +89,20 @@ public class ImageSelectionService implements Service {
     private List<VBox> postProcessImagesAndGetNodes() {
         List<VBox> imageViewList = new ArrayList<>();
 
-        double imgCount = images.size();
+        double imgCount = imageFiles.size();
 
-        for (int i = 0; i < images.size(); i++) {
+        for (int i = 0; i < imageFiles.size(); i++) {
             final int finalI = i;
             Platform.runLater(() ->
                     viewController.progressIndicator.setProgress((finalI + 1) / imgCount)
             );
 
-            BufferedImage image = images.get(i);
-
-            if (viewController.chkRemoveTopBottomBorder.isSelected()) {
-                image = ImageUtil.removeTopBottomBlackBorders(image);
-            }
-            if (viewController.chkRemoveLeftRightBorder.isSelected()) {
-                image = ImageUtil.removeLeftRightBlackBorders(image);
-            }
-            if (viewController.chkSquareImages.isSelected()) {
-                image = ImageUtil.squareImage(image);
+            Optional<BufferedImage> image = readAndTransformImage(imageFiles.get(i));
+            if (image.isEmpty()) {
+                continue;
             }
 
-            images.set(i, image);
-
-            VBox imageView = viewController.buildCoverImageView(image);
+            VBox imageView = viewController.buildCoverImageView(image.get());
             imageView.addEventFilter(MouseEvent.MOUSE_CLICKED, event -> onImageSelected(finalI));
 
             imageViewList.add(imageView);
@@ -113,9 +111,44 @@ public class ImageSelectionService implements Service {
         return imageViewList;
     }
 
+    private Optional<BufferedImage> readAndTransformImage(ImageFile imageFile) {
+        try {
+            BufferedImage bufferImage;
+
+            bufferImage = ImageIO.read(new File(imageFile.filePath()));
+
+            if (viewController.chkRemoveTopBottomBorder.isSelected()) {
+                bufferImage = ImageUtil.removeTopBottomBlackBorders(bufferImage);
+            }
+            if (viewController.chkRemoveLeftRightBorder.isSelected()) {
+                bufferImage = ImageUtil.removeLeftRightBlackBorders(bufferImage);
+            }
+            if (viewController.chkSquareImages.isSelected()) {
+                bufferImage = ImageUtil.squareImage(bufferImage);
+            }
+            return Optional.ofNullable(bufferImage);
+        } catch (IOException e) {
+            log.error(e.getMessage(), e);
+        }
+
+        return Optional.empty();
+    }
+
     private void onImageSelected(int index) {
-        if (index >= 0) {
-            newCover = images.get(index);
+        try {
+            if (index >= 0) {
+                Optional<BufferedImage> image = readAndTransformImage(imageFiles.get(index));
+
+                // Write transformed image back to the file
+                if (image.isPresent()) {
+                    ImageFile imageFile = imageFiles.get(index);
+                    ImageIO.write(image.get(), "jpg", new File(imageFile.filePath()));
+                    selectedCover = Optional.of(imageFile);
+                }
+            }
+        } catch (IOException e) {
+            log.error(e.getMessage(), e);
+            selectedCover = Optional.empty();
         }
 
         lightBoxService.hideDialog();
